--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
           <i class="bx bxs-star"></i>
         </div>
         <div class="price">INR 5000</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a> </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a> </button></p>
       </div>
 
       <div class="ac">
@@ -107,8 +107,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 3000</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a></button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a></button></p>
 
       </div>
 
@@ -125,8 +125,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 2000</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"> <a class="btn2" href="Cart.html">Buy</a> </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"> <a class="btn2" href="cart.html">Buy</a> </button></p>
 
       </div>
       <div class="ac">
@@ -142,8 +142,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 1500</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"> <a class="btn2" href="Cart.html">Buy</a> </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"> <a class="btn2" href="cart.html">Buy</a> </button></p>
 
       </div>
     </div>
@@ -189,8 +189,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 8500</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"></button><a class="btn2" href="Cart.html">Buy</a>Buy </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"></button><a class="btn2" href="cart.html">Buy</a>Buy </button></p>
 
       </div>
 
@@ -207,8 +207,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 5000</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a> </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a> </button></p>
 
       </div>
 
@@ -225,8 +225,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 1200</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a> </button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a> </button></p>
 
       </div>
       <div class="ac">
@@ -242,8 +242,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 2000</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a></button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a></button></p>
 
       </div>
       <div class="ac">
@@ -259,8 +259,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 3200</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"> <a class="btn2" href="Cart.html">Buy</a></button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"> <a class="btn2" href="cart.html">Buy</a></button></p>
 
       </div>
       <div class="ac">
@@ -276,8 +276,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 1600</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a></button> </p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a></button> </p>
 
       </div>
       <div class="ac">
@@ -293,8 +293,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 5600</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html"></a>Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a></button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html"></a>Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a></button></p>
 
       </div>
       <div class="ac">
@@ -310,8 +310,8 @@
           <i class="bx bx-star"></i>
         </div>
         <div class="price">INR 1500</div>
-        <p><button class="btn1"><a class="btn2" href="mycart.html">Add to Cart</a></button></p>
-        <p><button class="btn2"><a class="btn2" href="Cart.html">Buy</a></button></p>
+        <p><button class="btn1"><a class="btn2" href="cart.html">Add to Cart</a></button></p>
+        <p><button class="btn2"><a class="btn2" href="cart.html">Buy</a></button></p>
 
       </div>
     </div>
