--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
 <html> <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link src="cart.css"></link>
+    <link rel="stylesheet" href="cart.css"></link>
 <script src='https://libs.na.bambora.com/customcheckout/1/customcheckout.js'></script>
     </head>
     <body>
