--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     </head>
     <body>
+        <h1> Payment Page </h1>
 <div class="container">
     <form id="checkout-form">
         <div id="card-number"></div>
