--- a/cart.html
+++ b/cart.html
@@ -4,8 +4,9 @@
 <script src='https://libs.na.bambora.com/customcheckout/1/customcheckout.js'></script>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     </head>
-    <body>
-        <h1 class="div11"> Payment Page </h1>
+    <body> 
+        <div  class="div11">
+            <h1> Payment Page </h1> </div>
 <div class="container">
     <form id="checkout-form">
         <div id="card-number"></div>
